update .gitignore for venv

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 .idea/
 .vscode/
-.env
+.venv
 __pycache__/
 src/
 build/
@@ -12,6 +12,7 @@ dist/
 *.egg-info/
 *.code-workspace
 environment.yml
+requirements.txt
 
 defaults/Input Files/OCHRE*
 outputs/
