update input files using ResStock v3.2

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,4 @@ docs/_build
 *.code-workspace
 environment.yml
 
-defaults/Input Files/OCHRE*
-outputs/
-test/outputs/
-ochre/Models/SAM_weather_*.csv
+ochre/defaults/Input Files/OCHRE*
