--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "rainflow ~= 3.2",
     "pytz >= 2024.0",
     "python-dateutil ~= 2.9",
+    "click ~= 8.1",
     "boto3 ~= 1.35",
 ]
 requires-python = ">=3.9"
@@ -50,6 +51,11 @@ Documentation = "https://ochre-nrel.readthedocs.io/en/latest/"
 Repository = "https://github.com/NREL/OCHRE.git"
 Issues = "https://github.com/NREL/OCHRE/issues"
 Changelog = "https://github.com/NREL/OCHRE/blob/main/changelog.md"
+
+[project.scripts]
+ochre = "ochre:cli"
+ochre-gui-basic = "ochre:gui_basic"
+ochre-gui-detailed = "ochre:gui_detailed"
 
 [tool.hatch.version]
 path = "ochre/__init__.py"
