--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,4 +1,6 @@
 name: ochre_env
 dependencies:
   - python=3.10
-  - https://github.com/NREL/OCHRE.git@153-update-examples
+  - pip
+  - pip:
+    - https://github.com/NREL/OCHRE.git@153-update-examples
