--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "matplotlib ~= 3.8",
     "pint ~= 0.23",
     "pvlib ~= 0.10.4",
-    "nrel-pysam ~= 5.1",
+    "nrel-pysam >= 5.1",
     "psychrolib ~= 2.5",
     "numba ~= 0.59",  # required for psychrolib
     "xmltodict ~= 0.13.0",
