--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,22 +7,22 @@ name = "ochre-nrel"
 dynamic = ["version"]
 dependencies = [
     "numpy ~= 1.26",
-    "pandas >=1.4, < 3.0",
-    "scipy ~= 1.11",
-    "matplotlib ~= 3.9",
-    "pint ~= 0.23",
-    "pvlib ~= 0.10.4",
-    "nrel-pysam ~= 5.1",
+    "pandas >=1.4, <3.0",
+    "scipy ~= 1.15",
+    "matplotlib ~= 3.10",
+    "pint >= 0.23, <1.0",
+    "pvlib >= 0.10, <1.0",
+    "nrel-pysam >= 5.1, <7.0",
     "psychrolib ~= 2.5",
     "numba ~= 0.59",  # required for psychrolib
-    "xmltodict ~= 0.13.0",
-    "pyarrow ~= 15.0",
+    "xmltodict >= 0.13, <1.0",
+    "pyarrow >= 15.0",
     "fastparquet >= 2024.0",
     "rainflow ~= 3.2",
     "pytz >= 2024.0",
     "python-dateutil ~= 2.9",
     "click ~= 8.1",
-    "boto3 ~= 1.35",
+    "boto3 ~= 1.36",
 ]
 requires-python = ">=3.9"
 authors = [
